Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12726

combining input method hints works incorrectly on symbian

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.1
    • 4.6.3
    • None
    • None
    • 6eb7a210eed1b392431fc913d13d205b8ccc1933

    Description

      According to documentation:
      Note: If several exclusive flags are ORed together, the resulting character set will consist of the union of the specified sets. For instance specifying ImhNumbersOnly and ImhUppercaseOnly would yield a set consisting of numbers and uppercase letters.

      Actual behaviour:
      For some combinations of exclusive flags, the available characters are too restrictive, or the FEP crashes when pressing the * key to open the symbols popup

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            shkearns Shane Kearns
            shkearns Shane Kearns
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes